@@ -85,18 +85,21 @@ public class MainActivity extends NativeActivity {
   public static native void runFile(String fileName);
 
   public void addShortcut(final String path) {
-    Intent intent = new Intent(getApplicationContext(), MainActivity.class);
-    intent.setAction(Intent.ACTION_MAIN);
-    Intent addIntent = new Intent();
-    addIntent.putExtra(Intent.EXTRA_SHORTCUT_INTENT, intent);
-    addIntent.putExtra(Intent.EXTRA_SHORTCUT_NAME, "SmallBASIC");
-    addIntent.putExtra(Intent.EXTRA_SHORTCUT_ICON_RESOURCE,
-                       Intent.ShortcutIconResource.fromContext(getApplicationContext(),
-                                                               R.drawable.ic_launcher));
-    addIntent.putExtra("duplicate", false);
-    addIntent.setAction("com.android.launcher.action.INSTALL_SHORTCUT");
-    getApplicationContext().sendBroadcast(addIntent);
-    showToast("The shortcut was created and has been placed on your home screen", true);
+    Intent shortcut = new Intent(getApplicationContext(), MainActivity.class);
+    shortcut.setAction(Intent.ACTION_MAIN);
+    shortcut.setData(Uri.parse("smallbasic://" + path));
+    Intent intent = new Intent();
+    int index = path.lastIndexOf('/');
+    String name = (index == -1) ? path : path.substring(index + 1);
+    intent.putExtra(Intent.EXTRA_SHORTCUT_INTENT, shortcut);
+    intent.putExtra(Intent.EXTRA_SHORTCUT_NAME, name);
+    intent.putExtra(Intent.EXTRA_SHORTCUT_ICON_RESOURCE,
+                    Intent.ShortcutIconResource.fromContext(getApplicationContext(),
+                                                            R.drawable.ic_launcher));
+    intent.putExtra("duplicate", false);
+    intent.setAction("com.android.launcher.action.INSTALL_SHORTCUT");
+    getApplicationContext().sendBroadcast(intent);
+    showToast("The shortcut " + name + " was created and has been placed on your home screen", true);
   }
 
   public int ask(final String title, final String prompt, final boolean cancel) {
